--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: RACHEL'S BLOG
-description: I love programming, communication, book, music and photograph =)
-email: mjpark03@gmail.com
+title: Jung'S BLOG
+description: I love programming, book, football ,soccer=)
+email: internetot@naver.com
 baseurl: /
 #favicon
 favicon: RACHEL.png
